--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       />
       <div class="nama">
         <h4 class="text-center fw-bold">Nurhalim</h4>
-        <h5 class="text-center">Network Engineering</h5>
+        <h5 class="text-center">Network Engineer</h5>
       </div>
 
       <svg
@@ -158,7 +158,7 @@
                 data-aos-duration="800"
                 class="col-sm-4 mb-2"
               >
-              Hello, introduce my name is Nurhalim, I am usually called Lim. I am a network engineering. I am currently studying at Universitas Putra Indonesia "YPTK" Padang and starting my studies in 2020. I majored in Computer Engineering and focused on the discipline of computer networks. I also have several awards that I received during college and at school.
+              Hello, introduce my name is Nurhalim, I am usually called Lim. I am a network engineer. I am currently studying at Universitas Putra Indonesia "YPTK" Padang and starting my studies in 2020. I majored in Computer Engineering and focused on the discipline of computer networks. I also have several awards that I received during college and at school.
               </div>
               <div
                 data-aos="fade-up"
@@ -340,7 +340,7 @@
                             aria-label="Close"
                           ></button>
                         </div>
-                        <div class="modal-body">won the class champion in semester 6</div>
+                        <div class="modal-body">Champion in the class</div>
                         <div class="modal-body">achievement scholarship</div>
                         <div class="modal-footer">
                           <button
